--- a/_posts/2023-04-28-ai.md
+++ b/_posts/2023-04-28-ai.md
@@ -62,7 +62,7 @@ So as we can see, we have an answer that uses both Azure CLI and Powershell. Mor
 
 A few days later (this was late March 2023/early April 2023), I received an invitation to sign up for the preview of [Google Bard](https://bard.google.com/). Given that I'd just used ChatGPT, I thought I'd ask it the same question...
 
-The results were dissapointing. Bard responded that it didn't understand. A little playing about and it was clear that Bard wasn't anywhere near as useful for me. I wanted it to understand code, but it didn't appear that this early beta version was capable of that. A Google search was more informative.
+The results were disappointing. Bard responded that it didn't understand. A little playing about and it was clear that Bard wasn't anywhere near as useful for me. I wanted it to understand code, but it didn't appear that this early beta version was capable of that. A Google search was more informative.
 
 Now this was all about a month ago, giving it another try while writing this post it seems that Google have been working on it. It actually did now understand code! With the same prompt, this is the response from Bard:
 
